[package]
name = "xrpl_rust_wasm_demo"
version = "0.1.0"
edition = "2021"
authors = ["Wan Hafiz Wan Idris"]
description = "A minimal Rust + WASM demo showing how XRPL-like logic could compile to WebAssembly."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
